--- a/csv-processor.properties
+++ b/csv-processor.properties
@@ -3,5 +3,5 @@ bootstrap.servers=localhost:9092
 zookeeper.connect=localhost:2181
 schema.registry.url=http://localhost:8081
 source.topic=csv-in
-sink.topic=persons
+sink.topic=Persons
 schema.file=demo.avsc
