Allow mapping be specified through a pattern

--- a/csv-processor.properties
+++ b/csv-processor.properties
@@ -5,3 +5,4 @@ schema.registry.url=http://localhost:8081
 source.topic=csv-in
 sink.topic=Persons
 schema.file=demo.avsc
+csv.columns=awesome,length,,firstName,lastName
