--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>kafka-streams-csv</artifactId>
-  <groupId>kafka-streams-csv</groupId>
+  <artifactId>kafka-streams-csv2avro</artifactId>
+  <groupId>kafka-streams-csv2avro</groupId>
   <packaging>jar</packaging>
   <version>0.1</version>
-  <name>kafka-streams-csv</name>
+  <name>kafka-streams-csv2avro</name>
   <repositories>
     <repository>
       <id>confluent</id>
