--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <scala.version>${kafka.scala.version}.7</scala.version>
     <confluent.version>2.1.0-alpha1</confluent.version>
     <scalatest.version>2.2.6</scalatest.version>
+    <mockito.version>1.10.19</mockito.version>
     <avro.version>1.7.7</avro.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -58,6 +59,17 @@
       <artifactId>scala-library</artifactId>
       <!-- This version must be compatible with the Scala version of the Kafka dependency. -->
       <version>${scala.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.scalamock</groupId>
+      <artifactId>scalamock-scalatest-support_2.11</artifactId>
+      <version>3.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>joda-time</groupId>
