Make the separator configurable

--- a/csv-processor.properties
+++ b/csv-processor.properties
@@ -5,4 +5,7 @@ schema.registry.url=http://localhost:8081
 source.topic=csv-in
 sink.topic=Persons
 schema.file=demo.avsc
+#csv.columns=awesome|length||firstName|lastName
+#csv.separator=\\|
 csv.columns=awesome,length,,firstName,lastName
+csv.separator=,
