Make the string format configurable through regex; close #2

--- a/csv-processor.properties
+++ b/csv-processor.properties
@@ -9,3 +9,5 @@ schema.file=demo.avsc
 #csv.separator=\\|
 csv.columns=awesome,length,,firstName,lastName
 csv.separator=,
+#string.regex="(.*)"
+string.regex=(.*)
